force-app/main/default/objects/Log_Event__e/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <description>Related stream/functional area.</description>
    <label>Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>