force-app/main/default/objects/Log_Event__e/fields/Context_User__c.field-meta.xml
<CustomField>
    <fullName>Context_User__c</fullName>
    <description>Id of executing user, when error occurred.</description>
    <label>Context User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>