force-app/main/default/objects/Log_Event__e/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Type of log</description>
    <label>Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>